Fix z-index of search completion

--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -155,7 +155,7 @@ footer a{
 }
 
 .ac__container{
-	z-index: 1;
+	z-index: 25;
 	margin-top: -3px;
 	height: 3px;
 }
